<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azulFundo"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="com.example.spudydev.spudy.infraestrutura.gui.LoginActivity">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/azulFundo"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">


        <LinearLayout
            android:paddingVertical="70dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UnusedAttribute">

            <ImageButton
                android:id="@+id/imgLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                app:srcCompat="@drawable/vector_logo_new"
                tools:ignore="ContentDescription,VectorDrawableCompat" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/border_white"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/sp_hint_email"
                android:inputType="textWebEmailAddress"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColorHint="@color/textColorHint"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/edtSenha"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_white"
                android:drawableLeft="@drawable/ic_cadeado"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/sp_hint_senha"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColorHint="@color/textColorHint"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/txtEsqueciSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/sp_esqueceuSenha"
                android:textColor="@color/textColorAccent" />

            <Button
                android:id="@+id/btnEntrar"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/border_pink"
                android:text="@string/sp_btn_entrar"
                android:textColor="@color/branco"
                android:textSize="16sp" />

            <FrameLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/frame_layout_login"
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                tools:context="com.example.spudydev.spudy.infraestrutura.LoginActivity">

                <TextView
                    android:id="@+id/txtNaoRegistrado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/sp_usuario_nao_registrado"
                    android:textColor="@color/cinzaClaro"
                    tools:ignore="RtlHardcoded" />

                <TextView
                    android:id="@+id/txtRegistreSe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/sp_registre"
                    android:textColor="@color/textColorAccent"
                    tools:ignore="RtlHardcoded" />

            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
