<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.spudydev.spudy.activity.ChatActivity"
    tools:showIn="@layout/app_bar_chat">

    <TextView
        android:id="@+id/chatNomeDaTurma"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/sp_chat_nome_turma"
        android:gravity="center"
        android:background="@color/rosaSpudy"/>
    <RelativeLayout
        android:id="@+id/rltBotoesChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/chatNomeDaTurma"
        android:gravity="center"
        android:background="@color/azulFundo">
        <Button
            android:id="@+id/btnChatUsuario"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:background="@color/azulFundo"
            android:text="@string/sp_chat_usuarios"
            android:textColor="@color/cinzaClaro"/>
        <Button
            android:id="@+id/btnChatFaltas"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_toEndOf="@id/btnChatUsuario"
            android:layout_toRightOf="@id/btnChatNotas"
            android:background="@color/azulFundo"
            android:text="@string/sp_chat_faltas"
            android:textColor="@color/cinzaClaro"/>
        <Button
            android:id="@+id/btnChatNotas"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_toEndOf="@id/btnChatFaltas"
            android:layout_toRightOf="@id/btnChatFaltas"
            android:background="@color/azulFundo"
            android:text="@string/sp_chat_notas"
            android:textColor="@color/cinzaClaro"/>
        <Button
            android:id="@+id/btnChatMateriais"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_toEndOf="@id/btnChatNotas"
            android:layout_toRightOf="@id/btnChatNotas"
            android:background="@color/azulFundo"
            android:text="@string/sp_chat_materiais"
            android:textColor="@color/cinzaClaro"/>
    </RelativeLayout>
    <ListView
        android:id="@+id/lvChatListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@id/rltBotoesChat"
        android:layout_above="@id/rltMensagensDoChat">
    </ListView>
    <RelativeLayout
        android:id="@+id/rltMensagensDoChat"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/edtChatBarraDeMensagens"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/border_chat"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_toLeftOf="@id/btnEnviarMensagem"
            android:layout_toStartOf="@id/btnEnviarMensagem"
            android:inputType="text" />

        <Button
            android:id="@+id/btnEnviarMensagem"
            android:drawableLeft="@drawable/ic_enviar"
            android:drawableStart="@drawable/ic_enviar"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/border_chat"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
</RelativeLayout>
