<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/azulFundo"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        tools:context="com.example.spudydev.spudy.registro.gui.RegistroActivity">

        <ImageButton
            android:id="@+id/imgLogo"
            android:layout_marginTop="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            app:srcCompat="@drawable/ic_registre_se"
            tools:ignore="ContentDescription,VectorDrawableCompat" />
        <EditText
            android:id="@+id/edtNomeRegistro"
            android:drawableLeft="@drawable/ic_person"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="35dp"
            android:background="@drawable/border_branco"
            android:hint="@string/sp_hint_nome"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:inputType="textPersonName"
            android:textColor="@color/preto"
            android:maxLength="100"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/edtEmailRegistro"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/border_branco"
            android:hint="@string/sp_hint_email"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:inputType="textWebEmailAddress"
            android:textColor="@color/preto"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/edtDataRegistro"
            android:drawableLeft="@drawable/ic_calendario"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:inputType="date"
            android:background="@drawable/border_branco"
            android:hint="@string/sp_hint_nascimento"
            android:textColor="@color/preto"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/edtInstituicaoRegistro"
            android:drawableLeft="@drawable/ic_institucao"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:background="@drawable/border_branco"
            android:hint="@string/sp_hint_instituicao"
            android:inputType="text"
            android:textColor="@color/preto"
            android:maxLength="100"
            tools:ignore="RtlHardcoded" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/border_white"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center">
            <Spinner
                android:id="@+id/spnTipoDeConta"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:entries="@array/spinner_tipo_conta"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textColor="@color/cinzaLetras" />
        </RelativeLayout>
        <EditText
            android:id="@+id/edtSenhaReg"
            android:drawableLeft="@drawable/ic_cadeado"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border_branco"
            android:hint="@string/sp_hint_senha"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/preto"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/edtConfirmaSenha"
            android:drawableLeft="@drawable/ic_cadeado"
            android:drawablePadding="10dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:background="@drawable/border_branco"
            android:hint="@string/sp_hint_confirm_senha"
            android:inputType="textPassword"
            android:textColor="@color/preto"
            tools:ignore="RtlHardcoded" />


        <Button
            android:id="@+id/btnConfirmRegistro"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="35dp"
            android:background="@drawable/border_pink"
            android:text="@string/sp_confirm_reg"
            android:textColor="@color/branco" />


    </LinearLayout>
</ScrollView>